# Goals

./: .gitignore  LICENSE  README.md
.github/workflows/: rust.yml
goals_backend/: .gitignore  Cargo.toml
goals_backend/src/: .gitignore  fetch.rs  fetch_post.rs  gen_salt.rs  login.rs  main.rs  post.rs  scopes.rs  secrets.rs  signup.rs  structures.rs  votes.rs
goals_mobile/: README.md  pubspec.yaml
goals_mobile/.dart_tool/: package_config.json  package_config_subset
goals_mobile/.dart_tool/flutter_build/19178c2c72598ee1a963ec2ed4a39666/: .filecache  debug_android_application.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  kernel_snapshot.d  kernel_snapshot.stamp  outputs.json
goals_mobile/.dart_tool/flutter_build/bb0a9c5a4a137d7c7163be06bb02de51/: .filecache  debug_android_application.stamp  flutter_assets.d  kernel_snapshot.d  kernel_snapshot.stamp  outputs.json
goals_mobile/android/app/: build.gradle
goals_mobile/android/app/src/main/: AndroidManifest.xml
goals_mobile/android/app/src/main/kotlin/com/example/goals/: MainActivity.kt
goals_mobile/ios/Runner/: Info.plist
goals_mobile/ios/Runner.xcodeproj/: project.pbxproj
goals_mobile/lib/: main.dart
goals_mobile/lib/pages/: login_page.dart  sign_up_page.dart
goals_mobile/lib/utils/: colors.dart  constants.dart
goals_mobile/test/: widget_test.dart
