[package]
name = "goals_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
tokio = { version = "1.33.0", features = ["full"] }
