[package]
name = "goals_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
async_once = "0.2.6"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rust-argon2 = "2.0.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
