[package]
name = "goals_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
async_once = "0.2.6"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
directories = "5.0.1"
dotenvy = "0.15.7"
futures-util = "0.3.29"
image = "0.24.7"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
mime = "0.3.17"
rand = "0.8.5"
rust-argon2 = "2.0.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["v4"] }
